# sql

./: CLAUDE.md  README.md  boost.json  composer.json  package-lock.json
app/Http/Controllers/: DatabaseExportController.php  TableCsvExportController.php
app/Models/: DatabaseConnection.php
app/Services/Herd/: MigrationGenerator.php  MySqlManager.php  SshTunnelManager.php
config/: herd.php
database/factories/: DatabaseConnectionFactory.php
database/migrations/: 2026_04_01_152825_create_database_connections_table.php
desktop/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  db.rs  keychain.rs  main.rs  models.rs
desktop/src/components/: DataGrid.tsx  Sidebar.tsx
desktop/src/lib/: desktop-api.ts  mock-data.ts  storage.ts  types.ts
desktop/src/styles/: app.css
resources/css/: app.css
resources/views/components/: app-logo.blade.php
resources/views/components/layouts/: studio.blade.php
resources/views/components/layouts/app/: header.blade.php  sidebar.blade.php
resources/views/pages/: dashboard.blade.php
routes/: web.php
tests/Feature/: DashboardTest.php  DatabaseConnectionTest.php  DatabaseManagerTest.php  MigrationGeneratorTest.php  SshTunnelManagerTest.php
tests/Unit/: MySqlManagerTest.php
