[package]
name = "herd_studio_desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
csv = "1"
mysql = "26"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
